# slackroll

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run-tests.sh  slackroll  slackroll.slackbuild
.github/: renovate.json
.github/workflows/: ci.yml
ci/12.0/: Dockerfile
ci/13.37/: Dockerfile
ci/15.0/: Dockerfile
data/: py2_persistent.db
helpfiles/: 00-default.txt  all.txt  changelog.txt  frozen.txt  full-changelog.txt  manifest-search.txt
tests/: __init__.py  conftest.py  test_analyze_changes.py  test_blacklist_management.py  test_bootstrap_helpers.py  test_changelog_output.py  test_dotnew_helpers.py  test_extend_remote_list.py  test_info_text.py  test_install_operations_family.py  test_kernel_operations.py  test_list_operations.py  test_load_persistent_db.py  test_local_cache_builders.py  test_mirror_file.py  test_name_search_operation.py  test_package_classification_helpers.py  test_package_operations.py  test_parse_install_args.py  test_post_kernel_operation.py  test_print_helpers.py  test_prioritised_pkgs.py  test_self_file_version.py  test_serialise_deserialise.py  test_state_transitions.py  test_update_changelog.py  test_update_operations.py  test_utility_helpers.py  test_validation_helpers.py  test_verify_num_args.py  test_version.py
