[project]
name = "slackroll"
version = "55"
description = "Package or upgrade manager for Slackware Linux"
authors = [
  "Ricardo Garcia <commits@rg3.name>",
  "Andrew Clemons <andrew.clemons@gmail.com>",
  "Brent Spillner <spillner@acm.org>"
]
license = "CC0 Public Domain Dedication"
requires-python = ">=3.9"
dependencies = [ ]

[dependency-groups]
dev = [
    "mypy[python2]==0.961",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "toml>=0.10.2",
]
